--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     text-decoration: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /*overflow: hidden;*/
+    overflow: auto;
 }
 
 /* Tags e parametros para facilitar a programação do código e deixar mais organizado */
@@ -28,13 +28,17 @@
 /* Layout da página */
 
 #app {
-    font-size: 100%;
+    display: grid;
+
     background-color: var(--color-color-background-color);
     color: var(--color-color-primary-color);
 
-    display: grid;
+    font-size: 100%;
+
+    height: auto;
 
     grid-template-rows: max-content 1fr max-content;
+
 }
 
 /* Configurações da Navbar */
@@ -114,7 +118,7 @@
 .row-1 {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     justify-content: space-around;
 }
 
@@ -331,6 +335,228 @@
 
     cursor: pointer;
 }
+
+/* Container de experiencias */
+
+.row-4 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+    gap: 37px;
+
+    margin-top: 200px;
+}
+
+.row-4-escrito {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.row-4-escrito-titulo {
+    font-size: 55px;
+    color: var(--color-color-third-color);
+    margin-right: 55px;
+}
+
+.row-4-escrito-img {}
+
+.row-4-card {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.row-4-card-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    height: 300px;
+}
+
+.row-4-desc {
+    padding-left: 100px;
+
+    font-size: 25px;
+
+    width: 800px;
+}
+
+/* Container formulario de contato */
+
+.row-5 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+    gap: 37px;
+
+    margin-top: 200px;
+
+    padding-left: 15px;
+
+    margin-right: 50px;
+}
+
+.row-5-escrito {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.row-5-escrito-titulo {
+    font-size: 55px;
+
+    color: var(--color-color-third-color);
+
+    margin-right: 186px;
+}
+
+.row-5-escrito-img {
+    display: block;
+    align-items: end;
+}
+
+.row-5-card {
+    display: flex;
+    flex-direction: row;
+}
+
+.row-5-information {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.row-5-title {
+    font-size: 30px;
+}
+
+.row-5-desc {
+    width: 420px;
+
+    color: var(--color-color-third-color);
+
+    font-size: 20px;
+
+    margin-bottom: 35px;
+}
+
+.row-5-icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 25px;
+
+    color: var(--color-color-primary-color);
+}
+
+.row-5-icons a img {
+    color: var(--color-color-primary-color);
+}
+
+.row-5-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+}
+
+.row-5-form-contat {
+    display: flex;
+    flex-direction: column;
+}
+
+.row-5-form-input {
+    width: 825px;
+
+    height: 60px;
+
+    outline: none;
+
+    border: none;
+    border-radius: 10px;
+
+    padding: 27px;
+
+    margin-bottom: 37px;
+
+    background-color: var(--color-color-secondary-color);
+    color: var(--color-color-primary-color);
+
+    font-size: 25px;
+}
+
+.row-5-form-input:focus {
+    background-color: var(--color-color-third-color);
+    color: var(--color-color-secondary-color);
+
+    border: 2px solid;
+    border-color: var(--color-color-primary-color);
+
+    transition: 0.5s all linear;
+}
+
+.row-5-form-button-grid {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    gap: 12px;
+}
+
+.row-5-form-button {
+    width: 90%;
+    height: 50px;
+
+    background-color: var(--color-color-primary-color);
+    border-radius: 5px;
+    border: none;
+    color: var(--color-color-secondary-color);
+    cursor: pointer;
+    font-size: 30px;
+
+}
+
+.row-5-form-button:hover {
+    background-color: var(--color-color-secondary-color);
+    color: var(--color-color-primary-color);
+
+    transition: 0.2s all linear;
+
+    border: 2px solid var(--color-color-primary-color);
+}
+
+
+.row-5-form-button2 {
+    width: 90%;
+    height: 50px;
+
+    background-color: transparent;
+    border: none;
+    color: var(--color-color-primary-color);
+
+    font-size: 30px;
+
+    border-radius: 5px;
+
+    cursor: pointer;
+}
+
+.row-5-form-button2:hover {
+    border: 2px solid var(--color-color-primary-color);
+}
+
+
+.row-5-form-input::selection {}
 
 /* Footer Web site */
 
