--- a/css/media.css
+++ b/css/media.css
@@ -272,7 +272,71 @@
 }
 
 @media screen and (max-width: 1310px) {
-    .contact-information {
-        width: 1100px;
+
+    .contact-form {
+        max-width: 700px;
+    }
+
+    .contact-form-contact {
+        width: 100%;
+    }
+
+    .contact-form-input {
+        width: 100%;
+    }
+
+    .row-3-cards {
+        gap: 15px;
+    }
+
+    .row-3-card {
+        width: 300px;
+    }
+
+    .row-3-card-project {
+        width: 100%;
+    }
+
+    .row-3-card-tittle {
+        font-size: 30px;
+    }
+
+    .row-3-card-desc {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+
+    .contact-form {
+        max-width: 700px;
+    }
+
+    .contact-form-contact {
+        width: 100%;
+    }
+
+    .contact-form-input {
+        width: 100%;
+    }
+
+    .row-3-cards {
+        gap: 15px;
+    }
+
+    .row-3-card {
+        width: 300px;
+    }
+
+    .row-3-card-project {
+        width: 100%;
+    }
+
+    .row-3-card-tittle {
+        font-size: 30px;
+    }
+
+    .row-3-card-desc {
+        width: 100%;
     }
 }
